# RandomMPOMPS

./: .gitignore  README.md  environment.yml  pyproject.toml  setup_QR.sh
code/quantum/: dmrg.py  hamiltonians.py  tdvp.py
code/tensornetwork/: CMAKELists.txt  MPS.py  incrementalqr.cpp  incrementalqr.py  misc.py  rounding.py
experiments/: Fitting_failure.ipynb  Fitting_failure.py  dmrg2.ipynb  dmrg2.py  tdvp_light_cone.ipynb  tdvp_light_cone.py
results/: Figure1_final.ipynb  Figure2_final.ipynb  Figure3_final.ipynb  Figure4.ipynb  Figure4_final.ipynb  Figure5.ipynb  Figure_2.ipynb  Figure_3.ipynb  Figure_3_part3.ipynb
results/data/: fig1_final.csv  fig2_final.csv  fig4_final.csv
src/randommpomps/: __init__.py
util/: benchmarking.py  plotting.py
