[project]
name = "randommpomps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "ultimatile", email = "ultimatile@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.3.1",
  "quantum",
  "scipy>=1.16.0",
  "tensornetwork",
  "torch>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
quantum = { workspace = true }
tensornetwork = { workspace = true }
[tool.uv.workspace]
members = ["packages/quantum", "packages/tensornetwork"]

[dependency-groups]
dev = ["matplotlib>=3.10.3", "seaborn>=0.13.2", "tqdm>=4.67.1"]
